k8s/Calico/networkpolicy/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: stars
spec:
  podSelector:
    matchLabels: {}

# 모든 통신을 차단하는 Network Policy
# kubectl apply -f default-deny.yaml -n stars
