k8s/Calico/networkpolicy/pod-to-pod.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: stars
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 6379

# pod label이 role: backend인 pod와 role: frontend인 Pod끼리 TCP 6379 포트의 통신만 허용이
